--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>org.example</groupId>
     <artifactId>testng-adaptor</artifactId>
     <version>0.0.1</version>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Tesbo/TestNG-Adaptor</url>
+        </repository>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
