--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.tesbo</groupId>
     <artifactId>Report-Adaptor</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.1</version>
 
     <distributionManagement>
         <repository>
@@ -97,6 +97,13 @@
     </build>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.6.1</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.json</groupId>
