--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.tesbo</groupId>
     <artifactId>Report-Adaptor</artifactId>
-    <version>3.1.0</version>
+    <version>3.2.0</version>
 
     <distributionManagement>
         <repository>
@@ -60,7 +60,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        testng.SendDataOnDB
+                                        io.tesbo.report.ReportGenerator
                                     </mainClass>
                                 </manifest>
                             </archive>
@@ -97,6 +97,13 @@
     </build>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.2</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
             <groupId>org.testng</groupId>
@@ -140,11 +147,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>4.10.0</version>
         </dependency>
+
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
